nenolod     2005/11/02 18:51:40 UTC	(20051102-3399)
  Log:
  More stuff related to Crypto-API.
  

  Changes:	Modified:
  +1 -0		trunk/include/crypto.h (File Modified) 
  +1 -0		trunk/src/atheme.c (File Modified) 
  +1 -0		trunk/src/crypto.c (File Modified) 


nenolod     2005/11/02 18:50:19 UTC	(20051102-3397)
  Log:
  Crypto API support for register commands.
  

  Changes:	Modified:
  +13 -1	trunk/modules/nickserv/register.c (File Modified) 
  +10 -1	trunk/modules/userserv/register.c (File Modified) 


nenolod     2005/11/02 18:32:36 UTC	(20051102-3395)
  Log:
  Add more crypto library routines.
  

  Changes:	Modified:
  +4 -2		trunk/include/crypto.h (File Modified) 
  +26 -0	trunk/src/crypto.c (File Modified) 


nenolod     2005/11/02 17:54:21 UTC	(20051102-3393)
  Log:
  Use m->handle in module_locate_symbol().
  

  Changes:	Modified:
  +1 -1		trunk/src/module.c (File Modified) 


jilles      2005/11/02 01:58:18 UTC	(20051102-3391)
  Log:
  Treat IPs of users of "0", "0.0.0.0" and "255.255.255.255"
  as if no IP were specified. ("0" is used by TS6 for this.)
  

  Changes:	Modified:
  +1 -1		trunk/src/node.c (File Modified) 


nenolod     2005/11/02 01:01:37 UTC	(20051102-3389)
  Log:
  Add MU_CRYPTPASS, to designate an encrypted password.
  

  Changes:	Modified:
  +1 -0		trunk/include/account.h (File Modified) 


pfish       2005/11/01 09:26:18 UTC	(20051101-3387)
  Log:
  Update both example configs with RETURN.
  

  Changes:	Modified:
  +2 -0		trunk/dist/example.conf (File Modified) 
  +2 -0		trunk/dist/example.userserv.conf (File Modified) 


pfish       2005/11/01 09:21:18 UTC	(20051101-3385)
  Log:
  Port NickServ RETURN to UserServ.
  

  Changes:	Modified:
  +1 -0		trunk/modules/userserv/Makefile.in (File Modified) 
  +1 -0		trunk/modules/userserv/Makefile.win32 (File Modified) 
  +102 -0	trunk/modules/userserv/return.c (File Added) 


pfish       2005/11/01 09:16:16 UTC	(20051101-3383)
  Log: