@@ -1,3 +1,12 @@
+nenolod     2005/11/02 18:52:35 UTC	(20051102-3401)
+  Log:
+  Compile crypto modules on *nix. On windows, we don't care at the moment. Perhaps in 1.0.
+  
+
+  Changes:	Modified:
+  +1 -1		trunk/Makefile.in (File Modified) 
+
+
 nenolod     2005/11/02 18:51:40 UTC	(20051102-3399)
   Log:
   More stuff related to Crypto-API.
